<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg5"
    android:orientation="vertical">
    <!--android:background="@color/white"-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="492dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/easy_btn"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/EasyGame"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="serif"/>

        <Button
            android:id="@+id/medium_btn"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/MediumGame"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="serif"/>

        <Button
            android:id="@+id/hard_btn"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/HardGame"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <Button
            android:id="@+id/select_page_return"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/ret"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <Switch
            android:id="@+id/music_open"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/MusicOpen"
            android:textSize="20sp"
            android:textStyle="bold"
            android:checked="true"
            android:textColor="@color/white"
            android:background="@color/purple_500"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>

</LinearLayout>