<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg5"
    android:orientation="vertical">
    <!--android:background="@color/white"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/alone_mode"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/alone_mode"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <Button
            android:id="@+id/online_mode"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/online_mode"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="serif" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/start_notLoginLayout"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start_login"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="serif"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/start_register"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:text="@string/register"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="serif" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/start_isLoginLayout"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/start_exit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/exit"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="serif" />
    </LinearLayout>

</LinearLayout>