<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--android:background="@color/white"-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="492dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/login_label"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/alone_mode"
            android:textSize="30sp"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/usrname"
                android:textSize="15sp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/login_usrname"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text=""
                android:textSize="15sp"
                android:textStyle="bold"

                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/password"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text=""
                android:textSize="15sp"
                android:textStyle="bold"
                android:inputType="textPassword"

                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/IP"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/login_ip"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text=""
                android:textSize="15sp"
                android:textStyle="bold"

                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

        <Button
            android:id="@+id/login_send"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/affirm"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="serif" />


    </LinearLayout>
</LinearLayout>