<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rank_table_text"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/rank_table"
            android:textSize="34sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <TextView
            android:id="@+id/rank_mode"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="34sp"
            android:typeface="serif" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ListView
            android:id="@+id/rank_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="176dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/rank_delete"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:gravity="center"
                android:text="@string/delete"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/rank_return"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginTop="60dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/ret"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>